Добавил платные услуги
